--- a/Tumblr/Base.lproj/Main.storyboard
+++ b/Tumblr/Base.lproj/Main.storyboard
@@ -38,6 +38,10 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ZTy-7a-PLF"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="T9h-yc-jfS"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
